--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
-*.terraform*
-*.terragrunt*
-terraform.tfstate
+.*.sw?
+.idea
+terragrunt.iml
+vendor
+.terraform
+.vscode
+*.tfstate
+*.tfstate.backup
+*terraform.tfstate*
+*.out
+.terragrunt-cache
+.bundle
+.ruby-version
+.terraform.lock.hcl
+terragrunt
